css/style.css
/* CSS RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --white-smoke: #F8F9FA;
    --squid-ink: #051E34;
}

/* Body layouts */
.container-full {
    max-width: 1300px;
    margin: 0 auto;
}

header {
    height: 60px;
}

header form {
    flex-basis: 70%;
}

main {
    height: 100vh;
    max-width: 100vw;    
}

.sidebar {
    height: 100vh;
    width: 80px;
    padding: 100px 20px 20px 20px;
}

.main-screen {
    width: 100vw;
    height: 100vh;
    padding: 60px 0;
}

/* Utilities */
.bg-whitesmoke {
    background-color: var(--white-smoke);
}

.bg-squid-ink {
    background-color: var(--squid-ink);
}

.bg_opacity {
    background-color: #00000049;
}

.mw_40 {
    max-width: 40px;
}

.my_10 {
    margin: 10px 0;
}

h4 {
    font-size: 18px;
}

/* ---------- TO BE CHECKED ---------- */
.left_negative {
    left: -100px !important;
}
/* ----------   ---------- */

/* Other styles */
header i {
    margin: 0 10px;
}

.bg_image {
    background-image: url('../img/sidebar-bg.png');
}

.top-main span {
    font-size: 13px;
}

/* Responsiveness */
@media screen and (min-width: 992px) {
    .sidebar {
        width: 150px;
    }
}

